# Stroke-severity-prediction

./: .gitignore  Dockerfile  README.md  debug_run.py  debug_sqlalchemy.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  db.py  main.py  routes.py  schemas.py
model/: README.md
tests/: test_api.py
